# fastapi-event-driven

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: code-quality.yml
delivery_hub/: __main__.py  app.py  enums.py  event_type.py
delivery_hub/config/: __init__.py  default.py  utils.py
delivery_hub/db/: __init__.py  connection.py  models.py
delivery_hub/endpoints/: __init__.py
delivery_hub/endpoints/v1/: __init__.py  deliveries.py  events.py
delivery_hub/schemas/: __init__.py  deliveries.py  event.py
delivery_hub/service/: consumers.py  state.py
delivery_hub/utils/: consumers.py  state.py
tests/: conftest.py  test_handlers.py
tests/fixtures/: delivery.py
