[tool.poetry]
name = "fastapi-event-driven"
version = "0.1.0"
description = ""
authors = ["Дмитрий Анфимов <danfimov@yandex-team.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
redis-om = "^0.0.27"
uvicorn = "^0.18.3"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.971"
black = "^22.6.0"
pyproject-flake8 = "^0.0.1-alpha.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# LINTERS

[tool.flake8]
max-line-length = 120

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
known_local_folder = "delivery_hub"
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
