[tool.poetry]
name = "fastapi-event-driven"
version = "0.1.0"
description = ""
authors = ["Дмитрий Анфимов <danfimov@yandex-team.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
redis-om = "^0.0.27"
uvicorn = "^0.18.3"
pydantic = "^1.9.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.971"
black = "^22.6.0"
pyproject-flake8 = "^0.0.1-alpha.5"
httpx = "^0.23.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# PYTEST

[tool.pytest]
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test_*"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "def __str__",
    "def __unicode__",
]
show_missing = true
skip_empty = true
omit = [
  "*/__init__.py",
  "delivery_hub/db/migrator/env.py",
]

[tool.coverage.html]
directory = "pytest-cov-report"

[tool.coverage.run]
branch = true
concurrency = ['thread', 'greenlet']

[tool.pytest.ini_options]
asyncio_mode = "auto"

# LINTERS

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
known_local_folder = "delivery_hub"
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
